[package]
name = "main_crate"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# https://rustwasm.github.io/wasm-pack/book/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html#1-crate-type
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
sub_crate = { path = "../sub_crate" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2.50"

[features]
default = ["console_error_panic_hook"]
